Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4923

Incorrect merge on XtraDB os0file.c

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5.32
    • 5.5.33
    • None
    • None

    Description

      FusionIO has detected problems on migrating from 5.5.31 to 5.5.32 because of in .31 os_file_set_atomic_writes() will return ret from the ioctl() which is 0 for success. In .32, TRUE (1) is returned on success, which is then treated as an error and mysql refuses to start up.

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0.5d
                0.5d
                Remaining:
                Time Spent - 0.25d Remaining Estimate - 0.25d
                0.25d
                Logged:
                Time Spent - 0.25d Remaining Estimate - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.